# langolier-api

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  fly.toml
.sqlx/: query-0bff17366b6da1c744f0ff7932510f50221f6319a0eb35337f353c14a92c0aab.json  query-1076680c7f9ecfc3ed6c95464018cd2fed093a9b268ee5b49f7449b6c6b3e164.json  query-1268f9cb9fbca7e9068f4b3f5d7ed5afa66d239954f22ae6fc44e4a0d11aeb06.json  query-1d6a2ef94f90503f0c2b6aa838c31ce174242698bc76b2a61177c1b3bd2ce84e.json  query-46dd15243b10e63c074cb3ce97bdb8de25281f807923c52cd7136f349c1b95a1.json  query-561bb71603a413f43f3aab8854b067680d20b198657a09174ea2866653ce9181.json  query-578bfe97764a20e0715237e825b540b24cceed5fefeb24e270015fed40ba235e.json  query-5a57fda693ffd7438d872a9011eb515df84c91f08253db5543c03958082a2927.json  query-5b6589e612b74001e394fbaf92f5e13bfa4d29c3d5af45c129a03408da144259.json  query-6bfd91b7818d22259b87ee02e2be8f0abb2271687a83b17ee3c71ca678c8fd85.json  query-6c419ce715a1cea38a85efdc2329598678f1e98f3ef7e44b7646f1cadf525e4d.json  query-6c6a3f97794caa7854772c2f571815ac4f40bc28c7d1993a2d1b94dac84f40fd.json  query-7b7ee29ad0abb1a2df04bd5fe6ee3a30025eafebabc29440b5fb76bd1c2d6d20.json  query-98318238b1fed5e1a0fd68b77c0ec89283859c55df5204c9c8c906d12ac6f3ae.json  query-98d3007b091353c4cd61b317df1a7756fedb2c734a53e472121598c9ec0f2fff.json  query-9dca7ae212308097c6edcb6a405b24381d6fbceccc33f4db0d26b42b182eca26.json  query-a72869a4f4e05b4d64d3672d49700b9a2779ace085292add5b598c8a1646f9ef.json  query-b5e22e890e2d0136dc6c312b64f2c51dd3b71d4a84580e019807d1de68d6a77e.json  query-b74ea0aa44f10f9d606b30043788c8970e04216180ad001ee98e79375ad6ad69.json  query-c899113a82333b2039e51f7c67aca330972ced32b7e6487753067486f81f5b71.json  query-c90826b4bfceb0143cc7b677f691406933ce8ef29250f520bde528e69c2d116a.json  query-cc5df603f844721df2f2523bfbe9d88e84a6810e442341acfc7e8ee53490b7db.json  query-ccdde869acd593b24b537fb2592b6a1c182140f88882d343f2076fb1982b0d5f.json  query-d082c9b98804c25e5c43c400d2d243058739dd348537501aed44228bcfc8842e.json  query-e604e38e3a5426a9f662b87c92e240ce719e081582fb04c084932b1a3872282d.json  query-e8332f55093f675f2af9365e06140549a516472e8ee886332b1ce89591c9427b.json  query-ee6713aed147c37667d7f1623f1b2985a4d9cd7fc7d2b1308af59504084d22b3.json
data/: hn-blogroll.json
etc/: shane_localhost-2023_07_12_14_14_58-dump.sql
migrations/: 20230720222526_tables.sql
src/: config.rs  db.rs  main.rs  models.rs
src/extractor/: mod.rs
src/fetcher/: mod.rs
src/http/: api.rs  error.rs  fetcher.rs  mod.rs  news.rs
src/rating/: mod.rs
src/tasks/: mod.rs
